@@ -1,20 +1,20 @@
 [tox]
-envlist = py27,py3,code
+envlist = py27,py36,py37,code
+skip_missing_interpreters = true
 setenv = RUN_CODE_TESTS=0
 
 
-[testenv:py27]
+[testenv]
 deps = -rrequirements.txt
+commands_pre:
+    python compilec.py
 commands =
     pytest {posargs}
-passenv = LC_CTYPE
-
-
-[testenv:py3]
-deps = -rrequirements.txt
-commands =
-    pytest {posargs}
-passenv = LC_CTYPE
+passenv =
+    LC_CTYPE
+    LIBRSYNC_DIR
+setenv =
+    TOXPYTHON = {envpython}
 
 
 [testenv:code]
